--- a/src/view/ControleEmprestimoProfessor.form
+++ b/src/view/ControleEmprestimoProfessor.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Emprestimos de Professores"/>
@@ -241,7 +241,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Devolu&#xe7;a&#xf5;"/>
+            <Property name="text" type="java.lang.String" value="Realiza&#xe7;&#xe3;o"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="TextDataD">
