--- a/src/view/ControleAluno.form
+++ b/src/view/ControleAluno.form
@@ -384,11 +384,13 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
               <Format format="##" subtype="-1" type="5"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="00"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="TextSemestreFocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="ComboPeriodo">
           <Properties>
