--- a/src/view/Menu.form
+++ b/src/view/Menu.form
@@ -228,7 +228,7 @@
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="11">
+              <StringArray count="12">
                 <StringItem index="0" value="Janeiro"/>
                 <StringItem index="1" value="Fevereiro"/>
                 <StringItem index="2" value="Mar&#xe7;o"/>
@@ -238,8 +238,9 @@
                 <StringItem index="6" value="Julho"/>
                 <StringItem index="7" value="Agosto"/>
                 <StringItem index="8" value="Setembro"/>
-                <StringItem index="9" value="Novembro"/>
-                <StringItem index="10" value="Dezembro"/>
+                <StringItem index="9" value="Outubro"/>
+                <StringItem index="10" value="Novembro"/>
+                <StringItem index="11" value="Dezembro"/>
               </StringArray>
             </Property>
           </Properties>
@@ -310,7 +311,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Emprestimos previstos para hoje: "/>
+            <Property name="text" type="java.lang.String" value="Devolu&#xe7;&#xf5;es previstas para hoje: "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
